[package]
name = "jacob"
description = "Jacob's Awesome Compiler Of BITS"
version = "0.2.0"
edition = "2021"
authors = ["Jake Ledoux <contactjakeledoux@gmail.com>"]
license = "MIT"
repository = "https://github.com/jakeledoux/jacob/"
documentation = "https://docs.rs/jacob/latest/jacob/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitreader = "0.3.4"
bitstream-io = "1.2.0"
clap = { version = "3.0.0-rc.7", features = ["derive"], optional = true }
itertools = "0.10.3"
thiserror = "1.0.30"

[[bin]]
name = "jacob"
path = "src/bin/jacob.rs"
required-features = ["cli"]

[features]
cli = ["clap"]
